--- a/build.gradle
+++ b/build.gradle
@@ -26,11 +26,27 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
+
+    runtimeOnly 'org.postgresql:postgresql'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+
+    implementation 'org.springframework.boot:spring-boot-starter-logging'
+
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+//    implementation 'com.amazonaws:aws-java-sdk:1.12.772'
+
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.534'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.4'
+
 }
 
 tasks.named('test') {
