--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/tutorial
 spring.datasource.username=postgres
 spring.datasource.password=orkhan
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+logging.level.org.springframework=debug
+
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+#spring.profiles.active=dev
